Add initial YARP config and props file

--- a/src/LoginService/Properties/launchSettings.json
+++ b/src/LoginService/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:1115",
-      "sslPort": 44398
+      "applicationUrl": "https://localhost:1115",
+      "sslPort": 1115
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -25,7 +25,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "https://localhost:1114;http://localhost:1115"
+      "applicationUrl": "http://localhost:1114;http://localhost:1115"
     },
     "Docker": {
       "commandName": "Docker",
