--- a/src/LoginService/appsettings.json
+++ b/src/LoginService/appsettings.json
@@ -6,7 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Urls": "http://localhost:1114;http://localhost:1115",
+  "https_port": 1115,
+  "Urls": "http://localhost:1114;https://localhost:1115",
   "ManagementPort": "1115",
   "AllowedHosts": "*"
 }
