--- a/src/LoginService/appsettings.json
+++ b/src/LoginService/appsettings.json
@@ -9,5 +9,8 @@
   "https_port": 1115,
   "Urls": "http://localhost:1114;https://localhost:1115",
   "ManagementPort": "1115",
+  "ConnectionStrings": {
+    "LoginServiceDb": "Data Source=.\\smssqlserver2017;Initial Catalog=LoginServiceDatabase;Integrated Security=true;"
+  },
   "AllowedHosts": "*"
 }
