Add first working healthchecks and UI

--- a/src/LoggingService/appsettings.json
+++ b/src/LoggingService/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "https_port": 1121,
+  "Urls": "http://localhost:1120;https://localhost:1121",
+  "ManagementPort": "1121",
   "AllowedHosts": "*"
 }
