--- a/src/MonitoringService/appsettings.json
+++ b/src/MonitoringService/appsettings.json
@@ -6,5 +6,20 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "https_port": 1131,
+  "Urls": "http://localhost:1130;https://localhost:1131",
+  "ManagementPort": "1131",
+  "AllowedHosts": "*",
+  "HealthChecks-UI": {
+    "HealthChecks": [
+      {
+        "Name": "LoginService Check",
+        "Uri": "https://localhost:1115/hc"
+      },
+      {
+        "Name": "ResourceService Check",
+        "Uri": "https://localhost:5001/hc"
+      }
+    ]
+  }
 }
