--- a/src/ResourceService/appsettings.json
+++ b/src/ResourceService/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "https_port": 5001,
+  "Urls": "http://localhost:5000;https://localhost:5001",
+  "ManagementPort": "5001",
+  "ConnectionStrings": {
+    "ResourceDb": "Data Source=.\\smssqlserver2017;Initial Catalog=ResourceDatabase;Integrated Security=true;"
+  },
   "AllowedHosts": "*"
 }
