--- a/src/YARPService/appsettings.json
+++ b/src/YARPService/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "https_port": 1141,
+  "Urls": "http://localhost:1140;https://localhost:1141",
+  "ManagementPort": "1141",
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": [
