--- a/src/MonitoringService/Properties/launchSettings.json
+++ b/src/MonitoringService/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:61301",
-      "sslPort": 44397
+      "applicationUrl": "http://localhost:1131",
+      "sslPort": 1131
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -20,12 +20,12 @@
     "MonitoringService": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "hc-ui",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:1131;http://localhost:1130"
     },
     "Docker": {
       "commandName": "Docker",
