add swagger to loginservice and run codemaid cleanup

--- a/src/LoginService/appsettings.json
+++ b/src/LoginService/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "https_port": 1115,
-  "Urls": "http://localhost:1114;https://localhost:1115",
-  "ManagementPort": "1115",
+  "Urls": "http://localhost:1114;https://localhost:1115;https://localhost:1116",
+  "ManagementPort": "1116",
   "ConnectionStrings": {
     "LoginServiceDb": "Data Source=.\\smssqlserver2017;Initial Catalog=LoginServiceDatabase;Integrated Security=true;"
   },
