--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Product>BaGet</Product>
 
-    <PackageVersion Condition="'$(PackageVersion)' == ''">0.1.0-prerelease</PackageVersion>
+    <PackageVersion Condition="'$(PackageVersion)' == ''">1.1.0-prerelease</PackageVersion>
     <PackageProjectUrl>https://github.com/MarkZither/SwaggerAndHealthCheckBlog</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIconUrl>https://raw.githubusercontent.com/NuGet/Media/master/Images/MainLogo/256x256/nuget_256.png</PackageIconUrl>
@@ -27,14 +27,14 @@
 
   <!-- NuGet dependencies shared across projects -->
   <PropertyGroup>
-    <MicrosoftAspNetCorePackageVersion>3.1.3</MicrosoftAspNetCorePackageVersion>
-    <MicrosoftEntityFrameworkCorePackageVersion>3.1.3</MicrosoftEntityFrameworkCorePackageVersion>
-    <MicrosoftExtensionsPackageVersion>3.1.3</MicrosoftExtensionsPackageVersion>
+    <MicrosoftAspNetCorePackageVersion>5.0.0-preview.8*</MicrosoftAspNetCorePackageVersion>
+    <MicrosoftEntityFrameworkCorePackageVersion>5.0.0-preview.8*</MicrosoftEntityFrameworkCorePackageVersion>
+    <MicrosoftExtensionsPackageVersion>5.0.0-preview.8*</MicrosoftExtensionsPackageVersion>
     <NuGetPackageVersion>5.4.0</NuGetPackageVersion>
     <AspNetCoreHealthChecksVersion>3.1.2</AspNetCoreHealthChecksVersion>
     <AspNetCoreHealthChecksUIVersion>3.1.1</AspNetCoreHealthChecksUIVersion>
     <SwashbuckleVersion>5.5.1</SwashbuckleVersion>
-    <ServicesSharedVersion>1.0.0</ServicesSharedVersion>
+    <ServicesSharedVersion>1.1.0-prerelease</ServicesSharedVersion>
     <VSContainersVersion>1.10.9</VSContainersVersion>
     <NewtonsoftVersion>12.0.3</NewtonsoftVersion>
     <NLogVersion>4.7.4</NLogVersion>
