first working yarp config

--- a/src/ResourceService/appsettings.json
+++ b/src/ResourceService/appsettings.json
@@ -7,10 +7,10 @@
     }
   },
   "https_port": 5001,
-  "Urls": "http://localhost:5000;https://localhost:5001",
-  "ManagementPort": "5001",
+  "Urls": "http://localhost:5000;https://localhost:5001;https://localhost:5002",
+  "ManagementPort": "5002",
   "ConnectionStrings": {
-    "ResourceDb": "Data Source=.\\smssqlserver2017;Initial Catalog=ResourceDatabase;Integrated Security=true;"
+    "ResourceDb": "Data Source=.\\sqlserver2017;Initial Catalog=ResourceDatabase;Integrated Security=true;"
   },
   "AllowedHosts": "*"
 }
