--- a/src/YARPService/appsettings.json
+++ b/src/YARPService/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "Microsoft": "Debug",
+      "Microsoft.Hosting.Lifetime": "Debug"
     }
   },
   "https_port": 1141,
@@ -12,6 +12,30 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": [
+      {
+        "RouteId": "LoginServiceRoute",
+        "ClusterId": "clusterLoginService",
+        "Match": {
+          "Path": "/loginservice/{*remainder}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/loginservice"
+          }
+        ]
+      },
+      {
+        "RouteId": "ResourceServiceRoute",
+        "ClusterId": "clusterResourceService",
+        "Match": {
+          "Path": "/resourceservice/{*remainder}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/resourceservice"
+          }
+        ]
+      },
       {
         "RouteId": "route1",
         "ClusterId": "cluster1",
@@ -25,6 +49,20 @@
         "Destinations": {
           "cluster1/destination1": {
             "Address": "https://example.com/"
+          }
+        }
+      },
+      "clusterLoginService": {
+        "Destinations": {
+          "clusterLoginService/destination1": {
+            "Address": "https://localhost:1116/"
+          }
+        }
+      },
+      "clusterResourceService": {
+        "Destinations": {
+          "clusterResourceService1/destination1": {
+            "Address": "https://localhost:5002/"
           }
         }
       }
