--- a/src/LoginService/appsettings.json
+++ b/src/LoginService/appsettings.json
@@ -10,7 +10,7 @@
   "Urls": "http://localhost:1114;https://localhost:1115;https://localhost:1116",
   "ManagementPort": "1116",
   "ConnectionStrings": {
-    "LoginServiceDb": "Data Source=.\\smssqlserver2017;Initial Catalog=LoginServiceDatabase;Integrated Security=true;"
+    "LoginServiceDb": "Data Source=.\\sqlserver2017;Initial Catalog=LoginServiceDatabase;Integrated Security=true;"
   },
   "AllowedHosts": "*"
 }
