--- a/src/MonitoringService/appsettings.json
+++ b/src/MonitoringService/appsettings.json
@@ -18,7 +18,11 @@
       },
       {
         "Name": "ResourceService Check",
-        "Uri": "https://localhost:5001/hc"
+        "Uri": "https://localhost:5002/hc"
+      },
+      {
+        "Name": "NotificationService Check",
+        "Uri": "https://localhost:1179/hc"
       }
     ]
   }
