--- a/src/YARPService/appsettings.json
+++ b/src/YARPService/appsettings.json
@@ -25,14 +25,14 @@
         ]
       },
       {
-        "RouteId": "ResourceServiceRoute",
-        "ClusterId": "clusterResourceService",
+        "RouteId": "NotificationServiceRoute",
+        "ClusterId": "clusterNotificationService",
         "Match": {
-          "Path": "/resourceservice/{*remainder}"
+          "Path": "/notificationservice/{*remainder}"
         },
         "Transforms": [
           {
-            "PathRemovePrefix": "/resourceservice"
+            "PathRemovePrefix": "/notificationservice"
           }
         ]
       },
@@ -61,7 +61,14 @@
       },
       "clusterResourceService": {
         "Destinations": {
-          "clusterResourceService1/destination1": {
+          "clusterResourceService/destination1": {
+            "Address": "https://localhost:5002/"
+          }
+        }
+      },
+      "clusterNotificationService": {
+        "Destinations": {
+          "clusterNotificationService/destination1": {
             "Address": "https://localhost:5002/"
           }
         }
