Set a memory HealthCheck fail to Degraded status

--- a/src/MonitoringService/appsettings.json
+++ b/src/MonitoringService/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "https_port": 1131,
-  "Urls": "http://localhost:1130;https://localhost:1131",
-  "ManagementPort": "1131",
+  "Urls": "http://localhost:1130;https://localhost:1131;https://localhost:1132",
+  "ManagementPort": "1132",
   "AllowedHosts": "*",
   "HealthChecks-UI": {
     "HealthChecks": [
