--- a/src/YARPService/appsettings.json
+++ b/src/YARPService/appsettings.json
@@ -1,14 +1,14 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft": "Debug",
+      "Default": "Trace",
+      "Microsoft": "Trace",
       "Microsoft.Hosting.Lifetime": "Debug"
     }
   },
   "https_port": 1141,
-  "Urls": "http://localhost:1140;https://localhost:1141",
-  "ManagementPort": "1141",
+  "Urls": "http://localhost:1140;https://localhost:1141;https://localhost:1142",
+  "ManagementPort": "1142",
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": [
@@ -33,6 +33,44 @@
         "Transforms": [
           {
             "PathRemovePrefix": "/notificationservice"
+          }
+        ]
+      },
+      {
+        "RouteId": "InvalidTestServiceRoute",
+        "ClusterId": "clusterTestService",
+        "Match": {
+          "Path": "/invalidtestservice/{*remainder}"
+        },
+        "Transforms": {
+          "PathRemovePrefix": "/testservice"
+        }
+      },
+      {
+        "RouteId": "TestServiceRoute",
+        "ClusterId": "clusterTestService",
+        "Match": {
+          "Path": "/testservice/{*remainder}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/testservice"
+          }
+        ]
+      },
+      {
+        "RouteId": "TestPatternServiceRoute",
+        "ClusterId": "clusterTestService",
+        "Match": {
+          "Path": "/testpatternservice/{*remainder}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "/search/"
+          },
+          {
+            "QueryRouteParameter": "q",
+            "Append": "remainder"
           }
         ]
       },
@@ -70,6 +108,13 @@
         "Destinations": {
           "clusterNotificationService/destination1": {
             "Address": "https://localhost:5002/"
+          }
+        }
+      },
+      "clusterTestService": {
+        "Destinations": {
+          "clusterTestService/destination1": {
+            "Address": "https://google.com/"
           }
         }
       }
