--- a/src/YARPService/nlog.config
+++ b/src/YARPService/nlog.config
@@ -28,6 +28,50 @@
     <target xsi:type="File" name="operations" fileName=".\logs\LoginService-op-${shortdate}.log"
             layout="${longdate} | ${aspnet-user-identity} |  ${message} | ${exception}" />
 
+    <target xsi:type="ColoredConsole"
+      name="TraceCon"
+      layout="${longdate} | ${uppercase:${level}} | ${logger} |  ${ReplacedMessageFinal}">
+      <highlight-row backgroundColor="Black"
+                     foregroundColor="White"
+                     condition="true"/>
+    </target>
+      
+    <target xsi:type="ColoredConsole"
+    name="InfoCon"
+    layout="${longdate} | ${uppercase:${level}} | ${logger} |  ${ReplacedMessageFinal}">
+      <highlight-row backgroundColor="Black"
+                     foregroundColor="DarkCyan"
+                     condition="true"/>
+    </target>
+    <target xsi:type="ColoredConsole"
+        name="WarnCon"
+        layout="${longdate} | ${uppercase:${level}} | ${aspnet-user-identity} | ${logger} |  ${ReplacedMessageFinal} | ${exception:format=ToString,StackTrace}">
+      <highlight-row backgroundColor="Black"
+                     foregroundColor="Yellow"
+                     condition="true"/>
+    </target>
+    <target xsi:type="ColoredConsole"
+        name="ErrorCon"
+            layout="${longdate} | ${uppercase:${level}} | ${aspnet-user-identity} | ${logger} |  ${ReplacedMessageFinal} | ${exception:format=ToString,StackTrace}">
+      <highlight-row backgroundColor="Black"
+                     foregroundColor="Red"
+                     condition="true"/>
+    </target>
+    <target xsi:type="ColoredConsole"
+        name="FatalCon"
+        layout="${longdate} | ${uppercase:${level}} | ${aspnet-user-identity} | ${logger} |  ${ReplacedMessageFinal} | ${exception:format=ToString,StackTrace}">
+      <highlight-row backgroundColor="Yellow"
+                     foregroundColor="Red"
+                     condition="true"/>
+    </target>
+    <target xsi:type="ColoredConsole"
+        name="DebugCon"
+        layout="${longdate} | ${uppercase:${level}} | ${logger} |  ${ReplacedMessageFinal}">
+      <highlight-row backgroundColor="Black"
+                     foregroundColor="White"
+                     condition="true"/>
+    </target>
+    
     <!-- write to the void aka just remove -->
     <target xsi:type="Null" name="blackhole" />
   </targets>
@@ -37,6 +81,12 @@
     <!--All logs, including from Microsoft-->
     <logger name="*" minlevel="Trace" writeTo="allfile" />
 
+    <logger name="*" levels="Trace" writeTo="TraceCon" />
+    <logger name="*" levels="Info" writeTo="InfoCon" />
+    <logger name="*" levels="Warn" writeTo="WarnCon" />
+    <logger name="*" levels="Error" writeTo="ErrorCon" />
+    <logger name="*" levels="Fatal" writeTo="FatalCon" />
+    <logger name="*" levels="Debug" writeTo="DebugCon" />
     <!--Skip Microsoft logs and so log only own logs
     <logger name="Microsoft.*" minlevel="Debug" writeTo="blackhole" final="true" />
     <logger name="YARPService.*" minlevel="Debug" writeTo="operations" final="true" />-->
