add Startup Options Validation based on Baget

--- a/src/LoginService/appsettings.Development.json
+++ b/src/LoginService/appsettings.Development.json
@@ -5,5 +5,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AuthPasswordValidationOptions": {
+    "MaximumPasswordLength": 50,
+    "MinimumPasswordLength": 5
+  },
+  "AccessControlSettings": {
+    "LoginAttemptsCount": 10,
+    "LockoutTime": "00:10:00"
   }
 }
