--- a/src/YARPService/appsettings.json
+++ b/src/YARPService/appsettings.json
@@ -95,7 +95,13 @@
       "clusterLoginService": {
         "Destinations": {
           "clusterLoginService/destination1": {
+            "Address": "https://localhost:11116/"
+          },
+          "clusterLoginService/destination2": {
             "Address": "https://localhost:1116/"
+          },
+          "clusterLoginService/destination3": {
+            "Address": "https://localhost:11116/"
           }
         }
       },
