update packages and switch YARPService logging to Serilog

--- a/src/YARPService/appsettings.json
+++ b/src/YARPService/appsettings.json
@@ -1,9 +1,35 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Trace",
-      "Microsoft.Hosting.Lifetime": "Debug"
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.InfluxDB" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log.txt",
+          "rollingInterval": "Day"
+        }
+      },
+      /*{
+        "Name": "InfluxDB",
+        "Args": {
+          "applicationName": "testApp",
+          "instanceName": "testInstance",
+          "uri": "http://localhost:8086",
+          "dbName": "_internal"
+        }
+      }*/
+    ],
+    //"Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "Sample"
     }
   },
   "https_port": 1141,
