--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -27,20 +27,21 @@
 
   <!-- NuGet dependencies shared across projects -->
   <PropertyGroup>
-    <MicrosoftAspNetCorePackageVersion>5.0.0-preview.8*</MicrosoftAspNetCorePackageVersion>
-    <MicrosoftEntityFrameworkCorePackageVersion>5.0.0-preview.8*</MicrosoftEntityFrameworkCorePackageVersion>
-    <MicrosoftExtensionsPackageVersion>5.0.0-preview.8*</MicrosoftExtensionsPackageVersion>
+    <MicrosoftAspNetCorePackageVersion>5.0.2</MicrosoftAspNetCorePackageVersion>
+    <MicrosoftEntityFrameworkCorePackageVersion>5.0.2</MicrosoftEntityFrameworkCorePackageVersion>
+    <MicrosoftExtensionsPackageVersion>5.0.0</MicrosoftExtensionsPackageVersion>
     <NuGetPackageVersion>5.4.0</NuGetPackageVersion>
-    <AspNetCoreHealthChecksVersion>3.1.2</AspNetCoreHealthChecksVersion>
-    <AspNetCoreHealthChecksSqlServerVersion>3.1.1</AspNetCoreHealthChecksSqlServerVersion>
-    <AspNetCoreHealthChecksIdSrvVersion>3.1.1</AspNetCoreHealthChecksIdSrvVersion>
-    <AspNetCoreHealthChecksUIVersion>3.1.1</AspNetCoreHealthChecksUIVersion>
-    <SwashbuckleVersion>5.5.1</SwashbuckleVersion>
+    <AspNetCoreHealthChecksVersion>5.0.1</AspNetCoreHealthChecksVersion>
+    <AspNetCoreHealthChecksSqlServerVersion>5.0.2</AspNetCoreHealthChecksSqlServerVersion>
+    <AspNetCoreHealthChecksIdSrvVersion>5.0.1</AspNetCoreHealthChecksIdSrvVersion>
+    <AspNetCoreHealthChecksUIVersion>5.0.1</AspNetCoreHealthChecksUIVersion>
+    <SwashbuckleVersion>5.6.3</SwashbuckleVersion>
     <ServicesSharedVersion>1.1.1-prerelease</ServicesSharedVersion>
     <VSContainersVersion>1.10.9</VSContainersVersion>
     <NewtonsoftVersion>12.0.3</NewtonsoftVersion>
-    <NLogVersion>4.7.4</NLogVersion>
-    <NLogWebVersion>4.9.3</NLogWebVersion>
+    <NLogVersion>4.7.7</NLogVersion>
+    <NLogWebVersion>4.10.0</NLogWebVersion>
+    <SerilogPackageVersion>3.1.0</SerilogPackageVersion>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
