--- a/src/YARPService/YARPService.csproj
+++ b/src/YARPService/YARPService.csproj
@@ -15,12 +15,13 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="$(SwashbuckleVersion)" />
     <PackageReference Include="Microsoft.ReverseProxy" Version="1.0.0-preview.7.*" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="$(SerilogPackageVersion)" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="$(SerilogPackageVersion)" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="$(SerilogPackageVersion)" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="Serilog.Sinks.File" Version="3.1.1" />
-    <PackageReference Include="Serilog.Sinks.InfluxDB.Syslog" Version="1.2.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.InfluxDB.Syslog" Version="1.3.0" />
   </ItemGroup>
 </Project>
