add finbuckle multi-tenant example

--- a/src/ResourceService/appsettings.json
+++ b/src/ResourceService/appsettings.json
@@ -12,5 +12,22 @@
   "ConnectionStrings": {
     "ResourceDb": "Data Source=.\\sqlserver2017;Initial Catalog=ResourceDatabase;Integrated Security=true;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Finbuckle:MultiTenant:Stores:ConfigurationStore": {
+    "Defaults": {
+      "ConnectionString": "Datasource=sample.db"
+    },
+    "Tenants": [
+      {
+        "Id": "tenant-env-service",
+        "Identifier": "finbuckle",
+        "Name": "Finbuckle"
+      },
+      {
+        "Id": "burton-prod",
+        "Identifier": "burton-prod-blog",
+        "Name": "Burton"
+      }
+    ]
+  }
 }
