--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -29,7 +29,7 @@
   <PropertyGroup>
     <MicrosoftAspNetCorePackageVersion>5.0.2</MicrosoftAspNetCorePackageVersion>
     <MicrosoftEntityFrameworkCorePackageVersion>5.0.2</MicrosoftEntityFrameworkCorePackageVersion>
-    <MicrosoftExtensionsPackageVersion>5.0.0</MicrosoftExtensionsPackageVersion>
+    <MicrosoftExtensionsPackageVersion>5.0.*</MicrosoftExtensionsPackageVersion>
     <NuGetPackageVersion>5.4.0</NuGetPackageVersion>
     <AspNetCoreHealthChecksVersion>5.0.1</AspNetCoreHealthChecksVersion>
     <AspNetCoreHealthChecksSqlServerVersion>5.0.2</AspNetCoreHealthChecksSqlServerVersion>
