add basic appmetrics seup

--- a/src/LoginService/appsettings.json
+++ b/src/LoginService/appsettings.json
@@ -13,5 +13,21 @@
     "LoginServiceDb": "Data Source=.\\sqlserver2017;Initial Catalog=LoginServiceDatabase;Integrated Security=true;",
     "DefaultConnection": "Data Source=AspIdUsers.db;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MetricsOptions": {
+    "DefaultContextLabel": "MyMvcApplication",
+    "Enabled": true
+  },
+  "MetricsWebTrackingOptions": {
+    "ApdexTrackingEnabled": true,
+    "ApdexTSeconds": 0.1,
+    "IgnoredHttpStatusCodes": [ 404 ],
+    "IgnoredRoutesRegexPatterns": [],
+    "OAuth2TrackingEnabled": true
+  },
+  "MetricEndpointsOptions": {
+    "MetricsEndpointEnabled": true,
+    "MetricsTextEndpointEnabled": true,
+    "EnvironmentInfoEndpointEnabled": true
+  }
 }
