--- a/src/MonitoringService/MonitoringService.csproj
+++ b/src/MonitoringService/MonitoringService.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="4.1.0" />
     <PackageReference Include="Finbuckle.MultiTenant.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="$(VSContainersVersion)" />
     <PackageReference Include="Services.Shared" Version="$(ServicesSharedVersion)" />
