--- a/src/MonitoringService/MonitoringService.csproj
+++ b/src/MonitoringService/MonitoringService.csproj
@@ -15,7 +15,7 @@
     <PackageReference Include="App.Metrics.Reporting.Console" Version="4.1.0" />
     <PackageReference Include="Finbuckle.MultiTenant.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="$(VSContainersVersion)" />
-    <PackageReference Include="Services.Shared" Version="$(ServicesSharedVersion)" />
+    <PackageReference Include="Services.Shared" Version="1.1.2-prerelease" />
     <PackageReference Include="AspNetCore.HealthChecks.UI" Version="$(AspNetCoreHealthChecksUIVersion)" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="$(AspNetCoreHealthChecksUIVersion)" />
     <PackageReference Include="Newtonsoft.Json" Version="$(NewtonsoftVersion)" />
