make startup validation pass

--- a/src/ResourceService/appsettings.json
+++ b/src/ResourceService/appsettings.json
@@ -12,6 +12,7 @@
   "ConnectionStrings": {
     "ResourceDb": "Data Source=.\\sqlserver2017;Initial Catalog=ResourceDatabase;Integrated Security=true;"
   },
+  "IdentityServerUrl": "https://localhost:1115",
   "AllowedHosts": "*",
   "Finbuckle:MultiTenant:Stores:ConfigurationStore": {
     "Defaults": {
