--- a/src/YARPService/YARPService.csproj
+++ b/src/YARPService/YARPService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -27,6 +27,6 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="$(SerilogPackageVersion)" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
-    <PackageReference Include="Serilog.Sinks.InfluxDB.Syslog" Version="1.3.0" />
+    <PackageReference Include="Serilog.Sinks.InfluxDB.Syslog" Version="1.3.1" />
   </ItemGroup>
 </Project>
