--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Product>BaGet</Product>
 
-    <PackageVersion Condition="'$(PackageVersion)' == ''">1.1.2-prerelease</PackageVersion>
+    <PackageVersion Condition="'$(PackageVersion)' == ''">1.1.3-prerelease</PackageVersion>
     <PackageProjectUrl>https://github.com/MarkZither/SwaggerAndHealthCheckBlog</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIconUrl>https://raw.githubusercontent.com/NuGet/Media/master/Images/MainLogo/256x256/nuget_256.png</PackageIconUrl>
@@ -27,9 +27,9 @@
 
   <!-- NuGet dependencies shared across projects -->
   <PropertyGroup>
-    <MicrosoftAspNetCorePackageVersion>5.0.2</MicrosoftAspNetCorePackageVersion>
-    <MicrosoftEntityFrameworkCorePackageVersion>5.0.2</MicrosoftEntityFrameworkCorePackageVersion>
-    <MicrosoftExtensionsPackageVersion>5.0.*</MicrosoftExtensionsPackageVersion>
+    <MicrosoftAspNetCorePackageVersion>6.0.0-preview.1.*</MicrosoftAspNetCorePackageVersion>
+    <MicrosoftEntityFrameworkCorePackageVersion>6.0.0-preview.1.*</MicrosoftEntityFrameworkCorePackageVersion>
+    <MicrosoftExtensionsPackageVersion>6.0.0-preview.1.*</MicrosoftExtensionsPackageVersion>
     <NuGetPackageVersion>5.4.0</NuGetPackageVersion>
     <AspNetCoreHealthChecksVersion>5.0.1</AspNetCoreHealthChecksVersion>
     <AspNetCoreHealthChecksSqlServerVersion>5.0.2</AspNetCoreHealthChecksSqlServerVersion>
