--- a/src/LoggingService/LoggingService.csproj
+++ b/src/LoggingService/LoggingService.csproj
@@ -13,13 +13,13 @@
     <PackageReference Include="App.Metrics.GrafanaCloudHostedMetrics" Version="4.2.0" />
     <PackageReference Include="App.Metrics.InfluxDB" Version="4.2.0" />
     <PackageReference Include="App.Metrics.Reporting.Console" Version="4.2.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="$(VSContainersVersion)" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
     <PackageReference Include="Services.Shared" Version="1.1.2-prerelease" />
     <PackageReference Include="AspNetCore.HealthChecks.UI" Version="$(AspNetCoreHealthChecksUIVersion)" />
     <PackageReference Include="Newtonsoft.Json" Version="$(NewtonsoftVersion)" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="$(NLogWebVersion)" />
-    <PackageReference Include="NLog" Version="$(NLogVersion)" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.7" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
+    <PackageReference Include="NLog" Version="4.7.12" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
 </Project>
