Add UseHttpSys to appsettings

--- a/src/LoginService/nlog.config
+++ b/src/LoginService/nlog.config
@@ -2,7 +2,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="Trace"
+      internalLogLevel="Info"
       internalLogFile=".\logs\internal-YARPservice.txt">
 
   <!-- Load the ASP.NET Core plugin -->
@@ -91,6 +91,6 @@
     <logger name="Microsoft.*" minlevel="Debug" writeTo="blackhole" final="true" />
     <logger name="YARPService.*" minlevel="Debug" writeTo="operations" final="true" />-->
 
-    <logger name="*" minlevel="Debug" writeTo="ownFile-web" />
+    <logger name="*" minlevel="Info" writeTo="ownFile-web" />
   </rules>
 </nlog>
