--- a/src/LoginService/appsettings.json
+++ b/src/LoginService/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft": "Debug",
-      "Microsoft.Hosting.Lifetime": "Debug"
+      "Default": "Information",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Hosting": {
+    "UseHttpSys": false
   },
   "https_port": 1115,
   "Urls": "http://localhost:1114;https://localhost:1115;https://localhost:1116",
