Add source mapping to nuget.org

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -47,5 +47,10 @@
 
   <!-- Used to disable package sources  -->
   <disabledPackageSources />
-
+  <packageSourceMapping>
+    <!-- key value for <packageSource> should match key values from <packageSources> element -->
+    <packageSource key="nuget.org">
+      <package pattern="*" />
+    </packageSource>
+  </packageSourceMapping>
 </configuration>
