disable trace level logging in loginservice

--- a/src/LoginService/nlog.config
+++ b/src/LoginService/nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile=".\logs\internal-YARPservice.txt">
+      internalLogFile=".\logs\internal-Loginservice.txt">
 
   <!-- Load the ASP.NET Core plugin -->
   <extensions>
@@ -81,7 +81,7 @@
     <!--All logs, including from Microsoft-->
     <logger name="*" minlevel="Trace" writeTo="allfile" />
 
-    <logger name="*" levels="Trace" writeTo="TraceCon" />
+    <!--logger name="*" levels="Trace" writeTo="TraceCon" /-->
     <logger name="*" levels="Info" writeTo="InfoCon" />
     <logger name="*" levels="Warn" writeTo="WarnCon" />
     <logger name="*" levels="Error" writeTo="ErrorCon" />
